# alesharik-overlay

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: run.yaml
app-admin/kubectx/: Manifest  kubectx-0.9.1.ebuild  metadata.xml
app-vim/ansible-vim/: Manifest  ansible-vim-2.1.ebuild  ansible-vim-9999.ebuild  metadata.xml
app-vim/vim-ansible/: Manifest
app-vim/vim-mikrotik/: .vim-mikrotik-9999.ebuild.swp  Manifest  metadata.xml  vim-mikrotik-9999.ebuild
dev-java/async-profiler/: Manifest  async-profiler-1.5.ebuild  metadata.xml
dev-java/graalvm-bin/: Manifest  graalvm-bin-20.0.0-r11.ebuild  graalvm-bin-20.0.0-r8.ebuild
dev-java/java-sdk-docs/: Manifest  java-sdk-docs-13.0.1.ebuild
dev-java/openjdk-bin/: Manifest  metadata.xml  openjdk-bin-13.0.91-r1.ebuild  openjdk-bin-13.0.91.ebuild  openjdk-bin-14.0.36-r1.ebuild  openjdk-bin-14.0.36.ebuild  openjdk-bin-15.0.9.ebuild
dev-python/astor/: Manifest  astor-0.8.0.ebuild
dev-python/kubernetes/: Manifest  kubernetes-10.0.1.ebuild  kubernetes-10.0.ebuild  kubernetes-11.0-r1.ebuild  kubernetes-11.0.ebuild  kubernetes-17.17.0.ebuild  metadata.xml
dev-ruby/fastlane/: Manifest  fastlane-2.163.0.ebuild  metadata.xml
dev-util/sentry-cli/: Manifest  metadata.xml  sentry-cli-2.10.0.ebuild  sentry-cli-2.11.0.ebuild  sentry-cli-2.12.0.ebuild
licenses/: oracle-java-documentation-13  oracle-java-documentation-14  oracle-java-documentation-15
metadata/: layout.conf
profiles/: repo_name
sci-libs/tensorflow/: Manifest  tensorflow-2.0.0.ebuild  (+1 more)
src/: expander.rs  main.rs  metadata.xml
src/utils/: git.rs  (+3 more)
(+12 files in other folders)
