[package]
name = "overlay-automation"
version = "0.1.0"
authors = ["Aleksei Arsenev <alesharik4@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["macros", "fs"] }
anyhow = "1.0.69"
async-trait = "0.1.64"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tempdir = "0.3.7"
handlebars = "4.3.6"
semver = "1.0.16"

octocrab = "0.18.1"
git2 = "0.16.1"

cargo-ebuild = "0.5.4"

# Misc
version_check = "0.9.4"